--- a/src/app/components/gymnast/gymnast.component.html
+++ b/src/app/components/gymnast/gymnast.component.html
@@ -1,3 +1,4 @@
+
 <mat-card>
     <mat-card-header>
         <mat-card-title><mat-icon>person</mat-icon>  {{ gymnast.firstName }} {{ gymnast.lastName }}</mat-card-title>
@@ -12,4 +13,5 @@
             </mat-list-item>
         </mat-list>
     </mat-card-content>
+    <app-add-injury></app-add-injury>
 </mat-card>
