--- a/src/app/add-injury/add-injury.component.html
+++ b/src/app/add-injury/add-injury.component.html
@@ -1,1 +1,7 @@
-<p>add-injury works!</p>
+    <mat-form-field>
+        <input matInput placeholder="lichaamsdeel" 
+        #newInjury />
+    </mat-form-field>
+    <button class="b" (click)="addInjury(newInjury)" mat-raised-button>
+        Add Injury
+      </button>
