--- a/src/app/components/gymnast/gymnast.component.html
+++ b/src/app/components/gymnast/gymnast.component.html
@@ -1,5 +1,5 @@
 
-<mat-card>
+<mat-card class="card">
     <mat-card-header>
         <mat-card-title><mat-icon>person</mat-icon>  {{ gymnast.firstName }} {{ gymnast.lastName }}</mat-card-title>
         <mat-card-subtitle>Born on {{ gymnast.birthDate | date }}</mat-card-subtitle>
@@ -8,8 +8,8 @@
     <mat-card-content>
         <h3 mat-subheader>Blessures:</h3>
         <mat-list>
-            <mat-list-item *ngFor="let blessure of gymnast.injuries" >
-                <app-injury [name]=blessure></app-injury>
+            <mat-list-item *ngFor="let b of gymnast.injuries" >
+                <app-injury [injury]="b"></app-injury>
             </mat-list-item>
         </mat-list>
     </mat-card-content>
